--- a/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="fkO-D9-ehY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="fkO-D9-ehY">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -193,12 +193,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="He8-au-j7W">
-                                <rect key="frame" x="0.0" y="20" width="600" height="531"/>
-                                <connections>
-                                    <outlet property="delegate" destination="5ia-cS-Gcz" id="CIS-es-YJo"/>
-                                </connections>
-                            </mapView>
                             <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="nj1-2h-VWv">
                                 <rect key="frame" x="0.0" y="20" width="600" height="44"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -219,6 +213,12 @@
                                     <action selector="findTweetsButtonTapped:" destination="5ia-cS-Gcz" eventType="touchUpInside" id="heE-Jw-RxO"/>
                                 </connections>
                             </button>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="He8-au-j7W">
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                                <connections>
+                                    <outlet property="delegate" destination="5ia-cS-Gcz" id="CIS-es-YJo"/>
+                                </connections>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -227,8 +227,8 @@
                             <constraint firstItem="IWJ-Pb-ghZ" firstAttribute="trailing" secondItem="Aet-RG-tLi" secondAttribute="trailingMargin" id="Gew-3B-Kf6"/>
                             <constraint firstItem="He8-au-j7W" firstAttribute="leading" secondItem="Aet-RG-tLi" secondAttribute="leading" id="HaU-Rt-ihM"/>
                             <constraint firstAttribute="trailing" secondItem="He8-au-j7W" secondAttribute="trailing" id="U4k-Sz-rav"/>
-                            <constraint firstItem="He8-au-j7W" firstAttribute="top" secondItem="awr-sg-q1W" secondAttribute="bottom" id="Zli-Qk-qgu"/>
                             <constraint firstItem="nj1-2h-VWv" firstAttribute="leading" secondItem="Aet-RG-tLi" secondAttribute="leading" id="cFJ-ux-TEG"/>
+                            <constraint firstItem="He8-au-j7W" firstAttribute="top" secondItem="nj1-2h-VWv" secondAttribute="bottom" id="fmz-TU-AG1"/>
                             <constraint firstItem="He8-au-j7W" firstAttribute="top" secondItem="Aet-RG-tLi" secondAttribute="top" id="hIt-sy-Nft"/>
                             <constraint firstAttribute="trailing" secondItem="nj1-2h-VWv" secondAttribute="trailing" id="hJc-8n-sWe"/>
                             <constraint firstItem="nj1-2h-VWv" firstAttribute="top" secondItem="awr-sg-q1W" secondAttribute="bottom" id="jTm-6q-kNY"/>
